RbA Build/src/objects/Service_Symptom__c.object
<CustomObject>
    <description>The actual Service Symptom code added to the Order Item. Junction Object between Order Item and Service Symptom List</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Service_Product__r.Order.Account.Id,  Service_Product__r.Order.Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <formula>Service_Product__r.Installed_Product_Asset__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product_Text__c</fullName>
        <formula>Service_Product__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Service Symptoms</relationshipLabel>
        <relationshipName>Service_Symptoms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Service_Product__r.Order.Id, Service_Product__r.Order.OrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Symptom__c</fullName>
        <label>Service Symptom</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Service_Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Symptom_List__c</referenceTo>
        <relationshipLabel>Service Request Line Items</relationshipLabel>
        <relationshipName>Service_Symptoms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Service Symptom</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{000}</displayFormat>
        <label>Service Symptom #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Symptoms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ServiceSymptomsforManufacturerRbAOnly</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Service_Product__r.Number_Manufacturer_Charges__c &gt; 0 )</errorConditionFormula>
        <errorMessage>Service Symptoms are only for Products which have Responsibility to &apos;Manufacturing&apos; and What/Where = &apos;Renewal by Andersen&apos;</errorMessage>
    </validationRules>
</CustomObject>